force-app/main/default/objects/DocumentosProposta__c/DocumentosProposta__c.object-meta.xml
<CustomObject>
    <label>Documentos da Proposta</label>
    <nameField>
        <displayFormat>Proposta - {0}</displayFormat>
        <label>Nome de Documentos da Proposta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documentos das Propostas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>