force-app/main/default/objects/DocumentosProposta__c/fields/Convertido__c.field-meta.xml
<CustomField>
    <fullName>Convertido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convertido?</label>
    <type>Checkbox</type>
</CustomField>