force-app/main/default/objects/DocumentosProposta__c/fields/Cotacoes__c.field-meta.xml
<CustomField>
    <fullName>Cotacoes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cotações</label>
    <referenceTo>Cotacoes__c</referenceTo>
    <relationshipLabel>Documentos das Propostas</relationshipLabel>
    <relationshipName>DocumentosPropostas</relationshipName>
    <type>Lookup</type>
</CustomField>