force-app/main/default/objects/DocumentosProposta__c/fields/CustoPuro__c.field-meta.xml
<CustomField>
    <fullName>CustoPuro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custo Puro</label>
    <type>Checkbox</type>
</CustomField>