force-app/main/default/objects/DocumentosProposta__c/fields/DataValidade__c.field-meta.xml
<CustomField>
    <fullName>DataValidade__c</fullName>
    <formula>CreatedDate + 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de Validade</label>
    <type>Date</type>
</CustomField>