force-app/main/default/objects/DocumentosProposta__c/fields/Dias__c.field-meta.xml
<CustomField>
    <fullName>Dias__c</fullName>
    <label>Dias duração</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>