force-app/main/default/objects/DocumentosProposta__c/fields/ObservacoesProposta__c.field-meta.xml
<CustomField>
    <fullName>ObservacoesProposta__c</fullName>
    <label>Observações</label>
    <length>255</length>
    <type>Text</type>
</CustomField>