force-app/main/default/objects/DocumentosProposta__c/fields/QuantosDiasFaltaVencimento__c.field-meta.xml
<CustomField>
    <fullName>QuantosDiasFaltaVencimento__c</fullName>
    <formula>DataValidade__c -TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantos dias Falta Para Vencer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>