force-app/main/default/objects/DocumentosProposta__c/fields/Soma_do_tempo_emissao_proposta__c.field-meta.xml
<CustomField>
    <fullName>Soma_do_tempo_emissao_proposta__c</fullName>
    <formula>(CreatedDate- Cotacoes__r.CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Soma do tempo emissao proposta</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>