force-app/main/default/objects/DocumentosProposta__c/fields/Tempo_emiss_o_proposta__c.field-meta.xml
<CustomField>
    <fullName>Tempo_emiss_o_proposta__c</fullName>
    <formula>FORMATDURATION( CreatedDate , Cotacoes__r.CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo emissão proposta</label>
    <type>Text</type>
</CustomField>