force-app/main/default/objects/DocumentosProposta__c/fields/TESTE__c.field-meta.xml
<CustomField>
    <fullName>TESTE__c</fullName>
    <formula>IF( OR( VALUE( MID( TEXT( CreatedDate   - Cotacoes__r.CreatedDate), 12, 2 ) ) = 0, VALUE( MID( TEXT( CreatedDate    - Cotacoes__r.CreatedDate), 12, 2 ) ) = 12 ), 12, VALUE( MID( TEXT(CreatedDate   - Cotacoes__r.CreatedDate), 12, 2 ) ) - IF( VALUE( MID( TEXT( CreatedDate   - Cotacoes__r.CreatedDate) , 12, 2 ) ) &lt; 12, 0, 12 ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TESTE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>