force-app/main/default/objects/DocumentosProposta__c/fields/teste_Formula__c.field-meta.xml
<CustomField>
    <fullName>teste_Formula__c</fullName>
    <formula>8.5*( (5*FLOOR((DATEVALUE(CreatedDate ) -DATE(1996,01,01))/7) + MIN(5, MOD(DATEVALUE(CreatedDate ) -DATE(1996,01,01) , 7) + MIN(1, 24/8.5*(MAX(0,MOD(CreatedDate -DATETIMEVALUE(TEXT(DATEVALUE(CreatedDate ))&amp;&apos; 03:00:00&apos;), 1)))) ) ) - (5*FLOOR((DATEVALUE(Cotacoes__r.CreatedDate)-DATE(1996,01,01))/7) + MIN(5, MOD(DATEVALUE(Cotacoes__r.CreatedDate)-DATE(1996,01,01), 7) + MIN(1, 24/8.5*(MAX(0,MOD(Cotacoes__r.CreatedDate-DATETIMEVALUE(TEXT(DATEVALUE(Cotacoes__r.CreatedDate))&amp;&apos; 03:00:00&apos;), 1)))) )) )*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>teste Formula</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>